# CMakeGTestIntegration

./: .gitignore  CMakeLists.txt  README.md  main.cpp
gtest/: CMakeLists.gtest.in  CMakeLists.txt
unittest/: fixture_test.cpp  simple_test.cpp
